--- a/package.json
+++ b/package.json
@@ -23,75 +23,76 @@
     }
   },
   "dependencies": {
-    "@iconify/vue2": "~1.1.3",
-    "@modyqyw/utils": "~2.1.2",
-    "@vue/composition-api": "~1.4.6",
-    "@vueuse/core": "~7.6.2",
-    "@vueuse/integrations": "~7.6.2",
-    "axios": "~0.25.0",
-    "browser-update": "~3.3.38",
-    "color": "~4.2.1",
-    "dayjs": "~1.10.7",
-    "element-ui": "~2.15.7",
-    "modern-normalize": "~1.1.0",
-    "nprogress": "~0.2.0",
-    "pinia": "~2.0.11",
-    "query-string": "~7.1.1",
-    "statuses": "~2.0.1",
-    "vue": "~2.6.14",
-    "vue-query": "~1.19.0",
-    "vue-router": "~3.5.3",
-    "vue2-helpers": "~1.1.7",
-    "vuex": "~3.6.2"
+    "@iconify/vue2": "^1.1.3",
+    "@modyqyw/utils": "^2.1.2",
+    "@vue/composition-api": "^1.4.6",
+    "@vueuse/core": "^7.6.2",
+    "@vueuse/integrations": "^7.6.2",
+    "axios": "^0.26.0",
+    "browser-update": "^3.3.38",
+    "color": "^4.2.1",
+    "dayjs": "^1.10.7",
+    "element-ui": "^2.15.7",
+    "modern-normalize": "^1.1.0",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.11",
+    "query-string": "^7.1.1",
+    "statuses": "^2.0.1",
+    "vue": "^2.6.14",
+    "vue-query": "^1.19.1",
+    "vue-router": "^3.5.3",
+    "vue2-helpers": "^1.1.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.17.2",
-    "@babel/eslint-parser": "~7.17.0",
-    "@commitlint/cli": "~16.2.1",
-    "@commitlint/prompt": "~16.2.1",
-    "@iconify/json": "~2.0.36",
-    "@modyqyw/fabric": "~4.12.0",
-    "@types/browser-update": "~3.3.0",
-    "@types/color": "~3.0.3",
-    "@types/nprogress": "~0.2.0",
-    "@types/statuses": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~5.11.0",
-    "@typescript-eslint/parser": "~5.11.0",
-    "@vitejs/plugin-legacy": "~1.7.1",
-    "@vue/runtime-dom": "~3.2.31",
-    "commitizen": "~4.2.4",
-    "cross-env": "~7.0.3",
-    "eslint": "~8.9.0",
-    "husky": "~7.0.4",
-    "is-ci": "~3.0.1",
-    "lint-staged": "~12.3.3",
-    "markdownlint-cli": "~0.31.1",
-    "npm-check-updates": "~12.3.0",
-    "picocolors": "~1.0.0",
-    "postcss-flexbugs-fixes": "~5.0.2",
-    "postcss-preset-env": "~7.3.3",
-    "prettier": "~2.5.1",
-    "release-it": "~14.12.4",
-    "rimraf": "~3.0.2",
-    "sass": "~1.49.7",
-    "shelljs": "~0.8.5",
-    "stylelint": "~14.5.0",
-    "tailwindcss": "~1.9.6",
-    "type-fest": "~2.11.2",
-    "typescript": "~4.5.5",
-    "unplugin-icons": "~0.13.1",
-    "unplugin-vue-components": "~0.17.18",
-    "unplugin-vue2-script-setup": "~0.9.3",
-    "vite": "~2.8.1",
-    "vite-plugin-compression": "~0.5.1",
-    "vite-plugin-env-compatible": "~1.1.1",
-    "vite-plugin-eslint": "~1.3.0",
-    "vite-plugin-mkcert": "~1.5.2",
-    "vite-plugin-pages": "~0.20.2",
-    "vite-plugin-stylelint": "~1.1.3",
-    "vite-plugin-vue-layouts": "~0.6.0",
-    "vite-plugin-vue2": "~1.9.3",
-    "vue-template-compiler": "~2.6.14",
-    "vue-tsc": "~0.31.3"
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/prompt": "^16.2.1",
+    "@iconify/json": "^2.1.6",
+    "@modyqyw/fabric": "^4.12.0",
+    "@types/browser-update": "^3.3.0",
+    "@types/color": "^3.0.3",
+    "@types/nprogress": "^0.2.0",
+    "@types/statuses": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "@vitejs/plugin-legacy": "^1.7.1",
+    "@vue/runtime-dom": "^3.2.31",
+    "commitizen": "^4.2.4",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.9.0",
+    "husky": "^7.0.4",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^12.3.4",
+    "markdownlint-cli": "^0.31.1",
+    "npm-check-updates": "^12.4.0",
+    "picocolors": "^1.0.0",
+    "postcss": "^8.4.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.4.1",
+    "prettier": "^2.5.1",
+    "release-it": "^14.12.5",
+    "rimraf": "^3.0.2",
+    "sass": "^1.49.8",
+    "shelljs": "^0.8.5",
+    "stylelint": "^14.5.2",
+    "tailwindcss": "^1.9.6",
+    "type-fest": "^2.12.0",
+    "typescript": "^4.5.5",
+    "unplugin-icons": "^0.13.2",
+    "unplugin-vue-components": "^0.17.20",
+    "unplugin-vue2-script-setup": "^0.9.3",
+    "vite": "^2.8.4",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-env-compatible": "^1.1.1",
+    "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-mkcert": "^1.5.2",
+    "vite-plugin-pages": "^0.20.2",
+    "vite-plugin-stylelint": "^1.1.3",
+    "vite-plugin-vue-layouts": "^0.6.0",
+    "vite-plugin-vue2": "^1.9.3",
+    "vue-template-compiler": "^2.6.14",
+    "vue-tsc": "^0.31.4"
   }
 }
