--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@iconify/vue2": "^1.1.3",
     "@modyqyw/utils": "^2.1.2",
-    "@vue/composition-api": "^1.4.6",
+    "@vue/composition-api": "^1.4.7",
     "@vueuse/core": "^7.6.2",
     "@vueuse/integrations": "^7.6.2",
     "axios": "^0.26.0",
@@ -50,7 +50,8 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/prompt": "^16.2.1",
     "@iconify/json": "^2.1.6",
-    "@modyqyw/fabric": "^4.12.0",
+    "@modyqyw/fabric": "^4.13.1",
+    "@modyqyw/vite-plugin-eslint": "^1.0.0",
     "@types/browser-update": "^3.3.0",
     "@types/color": "^3.0.3",
     "@types/nprogress": "^0.2.0",
@@ -68,31 +69,30 @@
     "markdownlint-cli": "^0.31.1",
     "npm-check-updates": "^12.4.0",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.4.1",
     "prettier": "^2.5.1",
     "release-it": "^14.12.5",
     "rimraf": "^3.0.2",
-    "sass": "^1.49.8",
+    "sass": "^1.49.9",
     "shelljs": "^0.8.5",
-    "stylelint": "^14.5.2",
+    "stylelint": "^14.5.3",
     "tailwindcss": "^1.9.6",
     "type-fest": "^2.12.0",
     "typescript": "^4.5.5",
     "unplugin-icons": "^0.13.2",
-    "unplugin-vue-components": "^0.17.20",
-    "unplugin-vue2-script-setup": "^0.9.3",
+    "unplugin-vue-components": "^0.17.21",
+    "unplugin-vue2-script-setup": "^0.10.0",
     "vite": "^2.8.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-env-compatible": "^1.1.1",
-    "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-mkcert": "^1.5.2",
     "vite-plugin-pages": "^0.20.2",
-    "vite-plugin-stylelint": "^1.1.3",
+    "vite-plugin-stylelint": "^1.2.0",
     "vite-plugin-vue-layouts": "^0.6.0",
     "vite-plugin-vue2": "^1.9.3",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.31.4"
+    "vue-tsc": "^0.32.0"
   }
 }
