--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "@iconify/vue2": "^1.1.3",
-    "@modyqyw/utils": "^2.1.2",
     "@vue/composition-api": "^1.4.7",
     "@vueuse/core": "^7.6.2",
     "@vueuse/integrations": "^7.6.2",
@@ -33,10 +32,12 @@
     "color": "^4.2.1",
     "dayjs": "^1.10.7",
     "element-ui": "^2.15.7",
+    "lodash-es": "^4.17.21",
     "modern-normalize": "^1.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.11",
     "query-string": "^7.1.1",
+    "ramda": "^0.28.0",
     "statuses": "^2.0.1",
     "vue": "^2.6.14",
     "vue-query": "^1.19.1",
@@ -54,7 +55,9 @@
     "@modyqyw/vite-plugin-eslint": "^1.0.0",
     "@types/browser-update": "^3.3.0",
     "@types/color": "^3.0.3",
+    "@types/lodash-es": "^4.17.6",
     "@types/nprogress": "^0.2.0",
+    "@types/ramda": "^0.27.65",
     "@types/statuses": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
