--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "dependencies": {
     "@iconify/vue2": "^1.1.4",
     "@vue/composition-api": "^1.4.9",
-    "@vueuse/core": "^7.7.0",
-    "@vueuse/integrations": "^7.7.0",
-    "axios": "^0.26.0",
+    "@vueuse/core": "8.0.0",
+    "@vueuse/integrations": "^8.0.0",
+    "axios": "^0.26.1",
     "browser-update": "^3.3.38",
     "color": "^4.2.1",
     "dayjs": "^1.10.8",
@@ -40,7 +40,7 @@
     "ramda": "^0.28.0",
     "statuses": "^2.0.1",
     "vue": "^2.6.14",
-    "vue-query": "^1.19.1",
+    "vue-query": "^1.19.2",
     "vue-router": "^3.5.3",
     "vue2-helpers": "^1.1.7",
     "vuex": "^3.6.2"
@@ -50,29 +50,29 @@
     "@babel/eslint-parser": "^7.17.0",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/prompt": "^16.2.1",
-    "@iconify/json": "^2.1.10",
-    "@modyqyw/fabric": "^4.13.1",
+    "@iconify/json": "^2.1.14",
+    "@modyqyw/fabric": "^4.14.0",
     "@modyqyw/vite-plugin-eslint": "^1.0.0",
     "@types/browser-update": "^3.3.0",
     "@types/color": "^3.0.3",
     "@types/lodash-es": "^4.17.6",
     "@types/nprogress": "^0.2.0",
-    "@types/ramda": "^0.28.0",
+    "@types/ramda": "^0.28.1",
     "@types/statuses": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "@vitejs/plugin-legacy": "^1.7.1",
     "@vue/runtime-dom": "^3.2.31",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "husky": "^7.0.4",
     "is-ci": "^3.0.1",
-    "lint-staged": "^12.3.4",
+    "lint-staged": "^12.3.5",
     "markdownlint-cli": "^0.31.1",
-    "npm-check-updates": "^12.5.0",
+    "npm-check-updates": "^12.5.3",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.8",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.4.2",
     "prettier": "^2.5.1",
@@ -84,18 +84,18 @@
     "tailwindcss": "^1.9.6",
     "type-fest": "^2.12.0",
     "typescript": "^4.6.2",
-    "unplugin-icons": "^0.13.2",
-    "unplugin-vue-components": "^0.17.21",
+    "unplugin-icons": "^0.13.4",
+    "unplugin-vue-components": "0.17.21",
     "unplugin-vue2-script-setup": "^0.10.0",
     "vite": "^2.8.6",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-env-compatible": "^1.1.1",
     "vite-plugin-mkcert": "^1.6.0",
-    "vite-plugin-pages": "^0.21.2",
+    "vite-plugin-pages": "^0.21.4",
     "vite-plugin-stylelint": "^1.2.0",
     "vite-plugin-vue-layouts": "^0.6.0",
     "vite-plugin-vue2": "^1.9.3",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.32.1"
+    "vue-tsc": "^0.33.1"
   }
 }
