--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "dependencies": {
     "@iconify/vue2": "^1.1.4",
     "@vue/composition-api": "^1.4.9",
-    "@vueuse/core": "8.0.0",
-    "@vueuse/integrations": "^8.0.0",
+    "@vueuse/core": "^8.0.1",
+    "@vueuse/integrations": "^8.0.1",
     "axios": "^0.26.1",
     "browser-update": "^3.3.38",
     "color": "^4.2.1",
